<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_addition">+</string>
    <string name="_difference">-</string>
    <string name="_composition">*</string>
    <string name="_division">/</string>
    <string name="_equals">=</string>
    <string name="calc_screen">0</string>
    <string name="_reset">C</string>
    <string name="_theme">theme</string>
    <string name="orange_theme">Оранжевая тема</string>
    <string name="purple_theme">Фиолетовая тема</string>
    <string name="red_theme">Красная тема</string>
    <string name="button_choose_theme">Выбрать тему</string>
</resources>